# ok-py-subprocess-defaults

./: README.md  mise.toml  ok_subprocess_defaults.py  ok_subprocess_util.py  pyproject.toml  test.py  test_ok_subprocess_defaults.py  test_ok_subprocess_util.py
ok_subprocess_defaults/: __init__.py
