[project]
authors = [{ name = "Dan Egnor", email="egnor@ofb.net" }]
description = "Minor wrapper for subprocess.run() with defaults and logging"
name = "ok-subprocess-defaults"
readme = "README.md"
requires-python = ">=3.9"
urls.Homepage = "https://github.com/egnor/ok-py-subprocess-defaults#readme"
urls.Repository = "https://github.com/egnor/ok-py-subprocess-defaults.git"
version = "0.1"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.13,<0.10.0"]

[dependency-groups]
dev = ["mypy", "pytest", "ruff"]

[tool.mypy]
exclude_gitignore = true
files = "."

[tool.uv.build-backend]
module-root = ""
